Quick: Private-export QQuickTextLine

... so that qmlsc's direct mode can use it.

Fixes: QTBUG-115510
Change-Id: Ifea689a877ebbab7b9361d377a96e8b31e24bfbf
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 3cfdac28ca7fb65e10e20c632b240d7c07671d41)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>